# GhostScanner

./: CMakeLists.txt  README.md  my_scan_results.txt
docs/: design.md
include/: shroud.h
src/: main.c
